fix BIG bug in converting txt to coco format !!! coco bbox: [xmin, ymin, w, h]

--- a/Use Model.ipynb
+++ b/Use Model.ipynb
@@ -2,22 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import os.path as osp\n",
+    "import sys\n",
     "import numpy as np\n",
     "import torch, torchvision\n",
     "from torch import nn\n",
     "from torch.utils import model_zoo\n",
     "from torch.nn.parallel import DataParallel\n",
     "from torch.utils.data import DataLoader\n",
-    "from torch.utils.data.dataset import ConcatDataset"
+    "from torch.utils.data.dataset import ConcatDataset\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "missing keys in source state_dict: extra.2.weight, extra.7.bias, l2_norm.weight, extra.4.bias, extra.3.bias, extra.4.weight, extra.5.bias, extra.1.bias, extra.0.weight, extra.3.weight, extra.7.weight, extra.1.weight, extra.6.bias, extra.6.weight, extra.5.weight, extra.2.bias, extra.0.bias\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get model\n",
     "from mmdet.models import build_detector\n",
@@ -53,54 +49,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "inference_detector??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_result??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Unrecognized dataset: visdrone",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-fae1c8bf496f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/tmp/visdrone-debug/images/0000001_02999_d_0000005.jpg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minference_detector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mshow_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'visdrone'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# test a list of images and write the results to image files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Github/mmlab/mmdetection/mmdet/apis/inference.py\u001b[0m in \u001b[0;36mshow_result\u001b[0;34m(img, result, dataset, score_thr, out_file)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mshow_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'coco'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore_thr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmmcv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m     \u001b[0mclass_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_classes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mbbox_result\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msegm_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Github/mmlab/mmdetection/mmdet/core/evaluation/class_names.py\u001b[0m in \u001b[0;36mget_classes\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m     98\u001b[0m             \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malias2name\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_classes()'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Unrecognized dataset: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataset must a str, but got {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unrecognized dataset: visdrone"
-     ]
-    }
-   ],
    "source": [
     "from mmdet.apis import inference_detector, show_result\n",
     "\n",
     "# test a single image and show the results\n",
-    "# img = 'test.jpg'  # or img = mmcv.imread(img), which will only load it once\n",
     "img = '/tmp/visdrone-debug/images/0000001_02999_d_0000005.jpg'\n",
-    "result = inference_detector(model, img, cfg)\n",
-    "show_result(img, result, 'visdrone')\n",
-    "\n",
-    "# test a list of images and write the results to image files\n",
-    "imgs = ['test1.jpg', 'test2.jpg']\n",
-    "for i, result in enumerate(inference_detector(model, imgs, device='cuda:0')):\n",
-    "    show_result(imgs[i], result, model.CLASSES, out_file='result_{}.jpg'.format(i))"
+    "result = inference_detector(model, img, cfg, device='cuda')\n",
+    "# result is list of np array with [N, 5]\n",
+    "# show_result(img, result, 'visdrone')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First visualize coco dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/home/damon/detorch/')\n",
+    "from visualization_utils import *\n",
+    "from debug_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conver json['annotations'] to boxes\n",
+    "def get_gt_boxes_from_img_name_COCO(json_ann, image_name):\n",
+    "    image_id = None\n",
+    "    for im in json_ann['images']:\n",
+    "        if im['file_name'] != image_name:\n",
+    "            continue\n",
+    "        else:\n",
+    "            image_id = im['id']\n",
+    "            break\n",
+    "    print(image_id)\n",
+    "    if image_id == None:\n",
+    "        raise ValueError(\"Not found\")\n",
+    "    boxes = []\n",
+    "    for info in json_ann['annotations']:\n",
+    "        if info['image_id'] == image_id:\n",
+    "            x1, y1, w, h = info['bbox']\n",
+    "            bbox = [y1, x1, y1 + h, x1 + w]\n",
+    "            boxes.append(bbox)\n",
+    "    return np.asarray(boxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "coco_imgs = '/home/damon/DATASETS/COCO/val2017/'\n",
+    "coco_anno_file = '/home/damon/DATASETS/COCO/annotations/instances_val2017.json'\n",
+    "coco_annos = mmcv.load(coco_anno_file)\n",
+    "images = coco_annos['images']\n",
+    "annotations = coco_annos['annotations']\n",
+    "all_ids = [q['image_id'] for q in annotations]\n",
+    "id2fname = {v['id']: v['file_name'] for v in coco_annos['images'] if v['id'] in all_ids}\n",
+    "fname2id = {fn: id for id, fn in id2fname.items()}\n",
+    "# find name by id\n",
+    "ind = np.random.randint(len(id2fname.keys()))\n",
+    "example_img = id2fname[all_ids[ind]]\n",
+    "print(example_img)\n",
+    "example_img_full_path = osp.join(coco_imgs, example_img)\n",
+    "boxes = get_gt_boxes_from_img_name_COCO(coco_annos, example_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = mmcv.imread(example_img_full_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_bounding_boxes_on_image_array(img, boxes)\n",
+    "visualize_image_array(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vissualize visdrone dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('/home/damon/detorch/')\n",
+    "from visualization_utils import *\n",
+    "from debug_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ann = '/tmp/visdrone-debug/annotations_debug.json'\n",
+    "gts = mmcv.load(ann)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_name = '0000001_02999_d_0000005.jpg'\n",
+    "img_full = osp.join('/tmp/visdrone-debug/images', img_name)\n",
+    "img_arr = mmcv.imread(img_full)\n",
+    "img_name = osp.join('images', img_name)\n",
+    "boxes = get_gt_boxes_from_img_name(gts, img_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_bounding_boxes_on_image_array(img_arr, boxes)\n",
+    "visualize_image_array(img_arr)"
    ]
   },
   {
