--- a/ipynb/SSD from cfg.ipynb
+++ b/ipynb/SSD from cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -47,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "missing keys in source state_dict: extra.0.weight, extra.2.bias, extra.7.bias, extra.3.weight, extra.1.weight, extra.1.bias, extra.5.bias, extra.6.weight, extra.2.weight, l2_norm.weight, extra.5.weight, extra.4.weight, extra.4.bias, extra.7.weight, extra.6.bias, extra.0.bias, extra.3.bias\n",
+      "missing keys in source state_dict: extra.0.weight, l2_norm.weight, extra.6.weight, extra.7.bias, extra.5.bias, extra.0.bias, extra.1.weight, extra.3.bias, extra.4.weight, extra.6.bias, extra.4.bias, extra.5.weight, extra.7.weight, extra.2.bias, extra.2.weight, extra.1.bias, extra.3.weight\n",
       "\n"
      ]
     },
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded:  {'features.21.bias', 'features.33.weight', 'features.26.bias', 'features.21.weight', 'features.24.weight', 'features.14.weight', 'features.12.weight', 'features.28.bias', 'features.26.weight', 'features.10.weight', 'features.24.bias', 'features.12.bias', 'features.17.bias', 'features.0.bias', 'features.7.weight', 'features.17.weight', 'features.19.bias', 'features.31.bias', 'features.33.bias', 'features.2.bias', 'features.28.weight', 'features.2.weight', 'features.5.bias', 'features.19.weight', 'features.10.bias', 'features.7.bias', 'features.0.weight', 'features.5.weight', 'features.14.bias', 'features.31.weight'}\n"
+      "loaded:  {'features.2.bias', 'features.21.bias', 'features.26.weight', 'features.7.weight', 'features.10.weight', 'features.21.weight', 'features.7.bias', 'features.26.bias', 'features.28.weight', 'features.10.bias', 'features.0.bias', 'features.31.bias', 'features.33.weight', 'features.12.weight', 'features.0.weight', 'features.14.bias', 'features.5.weight', 'features.17.bias', 'features.14.weight', 'features.33.bias', 'features.19.weight', 'features.5.bias', 'features.12.bias', 'features.19.bias', 'features.28.bias', 'features.17.weight', 'features.31.weight', 'features.24.weight', 'features.2.weight', 'features.24.bias'}\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.77s)\n",
+      "Done (t=0.74s)\n",
       "creating index...\n",
       "index created!\n",
       "load_annotations time: 0.9s from data/VisDrone2019-DET/VisDrone2018-DET-train/annotations_train.json\n"
@@ -118,9 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'loss_cls': [tensor([7.6307], device='cuda:0', grad_fn=<UnsqueezeBackward0>),\n",
+       "  tensor([7.3495], device='cuda:0', grad_fn=<UnsqueezeBackward0>),\n",
+       "  tensor([5.7142], device='cuda:0', grad_fn=<UnsqueezeBackward0>),\n",
+       "  tensor([2.4330], device='cuda:0', grad_fn=<UnsqueezeBackward0>)],\n",
+       " 'loss_bbox': [tensor([6.2364], device='cuda:0', grad_fn=<DivBackward0>),\n",
+       "  tensor([5.9635], device='cuda:0', grad_fn=<DivBackward0>),\n",
+       "  tensor([4.0810], device='cuda:0', grad_fn=<DivBackward0>),\n",
+       "  tensor([0.9179], device='cuda:0', grad_fn=<DivBackward0>)]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ssd(**ssd_input)"
    ]
@@ -134,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,6 +160,95 @@
     "ssdmodule = ssd.module\n",
     "backbone = ssd.module.backbone\n",
     "bbox_head = ssd.module.bbox_head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SingleStageDetector(\n",
+       "  (backbone): SSDVGG(\n",
+       "    (features): Sequential(\n",
+       "      (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (1): ReLU(inplace)\n",
+       "      (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (3): ReLU(inplace)\n",
+       "      (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "      (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (6): ReLU(inplace)\n",
+       "      (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (8): ReLU(inplace)\n",
+       "      (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "      (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (11): ReLU(inplace)\n",
+       "      (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (13): ReLU(inplace)\n",
+       "      (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (15): ReLU(inplace)\n",
+       "      (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "      (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (18): ReLU(inplace)\n",
+       "      (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (20): ReLU(inplace)\n",
+       "      (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (22): ReLU(inplace)\n",
+       "      (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=True)\n",
+       "      (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (25): ReLU(inplace)\n",
+       "      (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (27): ReLU(inplace)\n",
+       "      (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (29): ReLU(inplace)\n",
+       "      (30): MaxPool2d(kernel_size=3, stride=1, padding=1, dilation=1, ceil_mode=False)\n",
+       "      (31): Conv2d(512, 1024, kernel_size=(3, 3), stride=(1, 1), padding=(6, 6), dilation=(6, 6))\n",
+       "      (32): ReLU(inplace)\n",
+       "      (33): Conv2d(1024, 1024, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (34): ReLU(inplace)\n",
+       "    )\n",
+       "    (extra): Sequential(\n",
+       "      (0): Conv2d(1024, 256, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "      (2): Conv2d(512, 128, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (3): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+       "      (4): Conv2d(256, 128, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (5): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "      (6): Conv2d(256, 128, kernel_size=(1, 1), stride=(1, 1))\n",
+       "      (7): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    )\n",
+       "    (l2_norm): L2Norm()\n",
+       "  )\n",
+       "  (bbox_head): SSDHead(\n",
+       "    (reg_convs): ModuleList(\n",
+       "      (0): Conv2d(512, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (1): Conv2d(1024, 24, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (2): Conv2d(512, 24, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (3): Conv2d(256, 24, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (4): Conv2d(256, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (5): Conv2d(256, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    )\n",
+       "    (cls_convs): ModuleList(\n",
+       "      (0): Conv2d(512, 44, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (1): Conv2d(1024, 66, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (2): Conv2d(512, 66, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (3): Conv2d(256, 66, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (4): Conv2d(256, 44, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "      (5): Conv2d(256, 44, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssdmodule"
    ]
   },
   {
