--- a/NMS on multicrop.ipynb
+++ b/NMS on multicrop.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
-    "hide_input": true
+    "hide_input": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import os.path as osp\n",
@@ -16,23 +25,18 @@
     "import torch.nn.functional as F\n",
     "from torch import nn\n",
     "import matplotlib.pyplot as plt\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from torchsummary import summary\n",
-    "\n",
-    "from torchviz import make_dot, make_dot_from_trace\n",
-    "\n",
     "import mmdet\n",
     "import mmcv\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "from mmdet.models import build_detector\n",
-    "from mmcv.parallel import MMDataParallel\n",
     "from mmdet.datasets import get_dataset\n",
     "from mmdet.datasets import transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def txt2det(fid, num_classes=10):\n",
-    "    \"\"\"\n",
+    "    \"\"\" Returns detecton result from one txt(image)\n",
     "    Args:\n",
     "        fid: opened file handler.\n",
     "    \"\"\"\n",
@@ -113,11 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dets(savedir, dataset):\n",
+    "    \"\"\" This function return dets format on original image,\n",
+    "    ignoring crops, it calls txt2det(). \n",
+    "    \n",
+    "    Returns:\n",
+    "        list(image) of list(class) of [N, 5]\n",
+    "    \"\"\"\n",
     "    results = []\n",
     "    for info in dataset.img_infos:\n",
     "        img_name = info['filename']\n",
@@ -137,11 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dets_merge(savedir, dataset):\n",
+    "    \"\"\" This function return dets format on original image,\n",
+    "    MERGE crops, it calls txt2det(). \n",
+    "    \n",
+    "    Returns:\n",
+    "        list(image) of list(class) of [N, 5]\n",
+    "    \"\"\"\n",
     "    results = []\n",
     "    for info in dataset.img_infos:\n",
     "        img_name = info['filename']\n",
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +197,61 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and preparing results...\n",
+      "DONE (t=9.41s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "Running per image evaluation...\n",
+      "Evaluate annotation type *bbox*\n",
+      "DONE (t=65.04s).\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=1.92s).\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.112\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.201\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.109\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.077\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.163\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.267\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.095\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.245\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.417\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.330\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.522\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.513\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Precision/mAP': 0.11220081274237778,\n",
+       " 'Precision/mAP_.50IOU': 0.20088392625434084,\n",
+       " 'Precision/mAP_.75IOU': 0.1085958834019823,\n",
+       " 'Precision/mAP_small': 0.07723474704863671,\n",
+       " 'Precision/mAP_medium': 0.1630736799805062,\n",
+       " 'Precision/mAP_large': 0.26690191022460164,\n",
+       " 'Recall/AR_1': 0.09473657483109706,\n",
+       " 'Recall/AR_10': 0.24486847911850504,\n",
+       " 'Recall/AR_100': 0.416658497362242,\n",
+       " 'Recall/AR_100_small': 0.3295318452536646,\n",
+       " 'Recall/AR_100_medium': 0.5223041431155542,\n",
+       " 'Recall/AR_100_large': 0.5131086261724264}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf = tempfile.mkstemp(suffix='.json')\n",
     "js = coco_utils.results2json(dataset, results, tf[1])\n",
@@ -205,7 +274,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from visdrone.utils import box_ops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results2 = results.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.95279312133789\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = time()\n",
+    "for idx, res in enumerate(results2):\n",
+    "    results2[idx] = box_ops.refine_boxes_multi_class(res, 10, 0.5, 500, 0.5, 'cuda')\n",
+    "print(time() - a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and preparing results...\n",
+      "DONE (t=2.81s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "Running per image evaluation...\n",
+      "Evaluate annotation type *bbox*\n",
+      "DONE (t=58.47s).\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=1.56s).\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.183\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.353\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.170\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.127\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.243\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.228\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.092\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.272\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.357\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.289\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.428\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.376\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Precision/mAP': 0.18304350687001456,\n",
+       " 'Precision/mAP_.50IOU': 0.35331328503357784,\n",
+       " 'Precision/mAP_.75IOU': 0.17034149981582647,\n",
+       " 'Precision/mAP_small': 0.12705158205697883,\n",
+       " 'Precision/mAP_medium': 0.24295604260602963,\n",
+       " 'Precision/mAP_large': 0.22790424703683193,\n",
+       " 'Recall/AR_1': 0.09235347186580027,\n",
+       " 'Recall/AR_10': 0.2720781807554025,\n",
+       " 'Recall/AR_100': 0.3567038433928441,\n",
+       " 'Recall/AR_100_small': 0.28946884417197705,\n",
+       " 'Recall/AR_100_medium': 0.4283635875455585,\n",
+       " 'Recall/AR_100_large': 0.376045742378444}"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf = tempfile.mkstemp(suffix='.json')\n",
+    "js = coco_utils.results2json(dataset, results2, tf[1])\n",
+    "coco_utils.coco_eval(tf[1], ['bbox'], dataset.coco)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.2       , 0.28333333, 0.36666667, 0.45      , 0.53333333,\n",
+       "       0.61666667, 0.7       , 0.78333333, 0.86666667, 0.95      ])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def transfrom_by_refine(results):\n",
+    "    for idx, res in enumerate(results):\n",
+    "        box_ops.refine_boxes_multi_class(res, 10, 0.5, 500, 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +429,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -280,34 +490,6 @@
     "tf = tempfile.mkstemp(suffix='.json')\n",
     "js = coco_utils.results2json(dataset, ress, tf[1])\n",
     "coco_utils.coco_eval(tf[1], ['bbox'], dataset.coco)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.2       , 0.28333333, 0.36666667, 0.45      , 0.53333333,\n",
-       "       0.61666667, 0.7       , 0.78333333, 0.86666667, 0.95      ])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0.2, 0.95, 10)"
    ]
   },
   {
@@ -553,39 +735,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.zeros([3,4]).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1495, 5),\n",
-       " (30, 5),\n",
-       " (49, 5),\n",
-       " (160, 5),\n",
-       " (6, 5),\n",
-       " (13, 5),\n",
-       " (3, 5),\n",
-       " (2, 5),\n",
-       " (0, 5),\n",
-       " (32, 5)]"
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[v.shape for v in ress[0]]"
+    "a[(a==0).nonzero()]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
