add ssd512_r50 more options

--- a/NMS on multicrop.ipynb
+++ b/NMS on multicrop.ipynb
@@ -121,7 +121,8 @@
     "                with open(exp_name) as f:\n",
     "                    result = txt2det(f)\n",
     "\n",
-    "        results.append(result)    "
+    "        results.append(result)    \n",
+    "    return results"
    ]
   },
   {
